Scripts/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ccit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
        - name: cont1
          image: httpd
          ports:
            - containerPort: 80
