Scripts/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ccitrs
spec:
  type: NodePort
  selector:
    app: swiggy
  ports:
    - port: 80
      targetPort: 80
