Scripts/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiggy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: swiggy.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: swiggy-service
                port:
                  number: 80
